First working version, when set webhook manually